Remade abstract Builder class with method definitions that were previously in SampleBuilder. Remade SampleBuilder accordingly.

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -8,6 +8,7 @@ target_sources(rpg
         Party.cpp
         Room.cpp
         SampleBuilder.cpp
+        Builder.cpp
 )
 
 target_include_directories(rpg PRIVATE ${CPP})
